===== Stable Versions ========
[B]v1.1.6 (5/12/2014)[/B]
-Updated windows acestream engine to version 3.0.4
-Updated general linux x86 acestream engine to version 3.0.3
-Updated general linux x64 acestream engine to version 3.0.3
-Updated Openelec x86 acestream engine to version 3.0.3
-Updated Openelec x64 acestream engine to version 3.0.3

[B]v1.1.5 (17/11/2014)[/B]
-Fix listings for Kodi Helix
-Fix dropbox hosted lists

[B]v1.1.4 (29/10/2014)[/B]
-Acestreamengine bundle for Linux x86 was re-packaged (based on debian to avoid debian errors)
-Fixed OSX curl errors with sopcast (file is downloaded locally by a thread and forwarded to the player)
-New settings for sopcast in osx (timer used for example)
-New configuration for acestreams under osx (using the windows wine emulated version of the acestreamengine 3.0.2 by july ighor)
-New behaviour for Acestreams in OSX
-Changes to the wiki

[B]v1.1.3 (23/10/2014)[/B]
-Updated windows acestream engine to version 3.0.2
-Updated Linux x64 acestream engine to version 3.0.2
-Updated Linux x86 acestream engine to version 3.0.2
-Updated OpenELEC x64 acestream engine to version 3.0.2
-Updated OpenELEC i386 acestream engine to version 3.0.2
-Updated Android Arm acestream engine bundle to version 3.0.2
-Updated Acestreamengine.apk and AcePlayer.apk in google code repo/mirror
-Fixed action-type settings for Kodi/Helix
-Improved italian translation (tks axlt2002)

[B]v1.1.2 (4/10/2014)[/B]
-Fix manually add to favourites option not showing
-Fix non-existent acestreamcachefolder on linux
-Added addon history (can be disabed in the addon settings). Every ace or sop link you watch gets saved
-It's now possible to change acestreamengine settings through the addon gui in windows
-Added option to enter the list of parsers on addon startup
-Updated italian translation (tks axlt2002)

[B]v1.1.1 (29/9/2014)[/B]
-Fix changing acestream settings from the addon for recent linux/android acestreamengine versions